objects/ASI_CRM_ContractOtherIncentive__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_AchievedBtl__c</fullName>
        <label>Achieved (Btl)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Bottle_Value__c</fullName>
        <formula>ASI_CRM_FOC__c * ASI_CRM_MinSPBtl__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bottle Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Branch__c</fullName>
        <label>Branch</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CashInc__c</fullName>
        <label>Cash Inc.</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Contract__c</fullName>
        <label>Contract</label>
        <referenceTo>ASI_TH_CRM_Contract__c</referenceTo>
        <relationshipLabel>Contract Other Incentives</relationshipLabel>
        <relationshipName>Contract_Other_Inventives</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Exclude__c</fullName>
        <description>Exclude in Report or Calculation</description>
        <formula>AND (
 ISBLANK(ASI_CRM_Description__c),
 OR(ISBLANK(ASI_CRM_MinSPBtl__c), ASI_CRM_MinSPBtl__c = 0),
 OR(ISBLANK(ASI_CRM_FOC__c), ASI_CRM_FOC__c = 0),
 OR(ISBLANK(ASI_CRM_CashInc__c), ASI_CRM_CashInc__c = 0)
)</formula>
        <label>Exclude</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_FOC__c</fullName>
        <label>FOC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_IGC__c</fullName>
        <label>IGC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_JDECOA__c</fullName>
        <label>JDE COA</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_MinSPBtl__c</fullName>
        <label>Min SP (Btl)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_PackFactor__c</fullName>
        <formula>ASI_CRM_SKU__r.ASI_HK_CRM_Pack_Factor__c</formula>
        <label>Pack Factor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Product__c</fullName>
        <formula>ASI_CRM_SKU__r.Name</formula>
        <label>Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SKUCode__c</fullName>
        <formula>ASI_CRM_SKU__r.ASI_MFM_SKU_Code__c</formula>
        <label>SKU Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SKU__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SKU</label>
        <referenceTo>ASI_MFM_SKU_Code__c</referenceTo>
        <relationshipLabel>Contract Other Incentives</relationshipLabel>
        <relationshipName>Contract_Other_Inventives</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SetupCode__c</fullName>
        <label>Setup Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Total__c</fullName>
        <label>Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A&amp;P Sponsorship</fullName>
                </value>
                <value>
                    <fullName>Events Sponsors</fullName>
                </value>
                <value>
                    <fullName>Anniversary</fullName>
                </value>
                <value>
                    <fullName>Directors Birthday</fullName>
                </value>
                <value>
                    <fullName>Official Opening</fullName>
                </value>
                <value>
                    <fullName>Up Front</fullName>
                </value>
                <value>
                    <fullName>Bonus</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_WSSP__c</fullName>
        <label>Wholesaler Selling Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Contract Other Incentive</label>
    <nameField>
        <displayFormat>COIN{00000000}</displayFormat>
        <label>Contract Other Incentive ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Other Incentives</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_MY_ContractOtherIncentive</fullName>
        <active>true</active>
        <label>Contract Other Incentive (MY)</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>